--- a/BabuinLand/snippets/home-snippet.html
+++ b/BabuinLand/snippets/home-snippet.html
@@ -5,21 +5,20 @@
       <div id="home-tiles" class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 col-12">
           <a href="#" onclick="$dc.loadDegradation();"><div id="menu-tile">
-            <span>Chechnya</span></div>
+            <span>Degradation</span></div>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col-12">
           <a href="#" onclick="$dc.loadDepression();">
             <div id="specials-tile">
-              <span>Degradation</span>
+              <span>Depression</span>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-12">
           <a href="#" onclick="$dc.loadAgression();"">
             <div id="map-tile">
-
-              <span>SEX</span>
+              <span>Agression</span>
             </div>
           </a>
         </div>
