--- a/BabuinLand/snippets/Babuin-item.html
+++ b/BabuinLand/snippets/Babuin-item.html
@@ -1,11 +1,11 @@
 <div class="babuin-item-tile col-md-6">
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-md-5">
       <div class="babuin-item-photo">
         <img class="img-responsive" width="200" height="200" src="images/list/{{short_name}}.jpg" alt="Item">
       </div>
     </div>
-    <div class="babuin-item-description col-sm-7">
+    <div class="babuin-item-description col-md-7">
       <h3 class="babuin-item-title">{{name}}</h3>
       <p class="babuin-item-details">{{description}}</p>
       <div id="babuin-hazard-lvl">Уровень угрозы: {{hazard}}</div>
