--- a/BabuinLand/index.html
+++ b/BabuinLand/index.html
@@ -22,14 +22,14 @@
 
 
           <div class="navbar-brand">
-          <a href="index.html" class="float-left d-none d-sm-block">
+          <a href="index.html" class="float-left d-none d-md-block">
             <div id="logo-img" alt="Logo image"></div>
           </a>
             <a href="index.html"><h1>BABUIN LAND</h1></a>
-              <p>
-              
-              <span>Поговорим на языке боли</span>
-            </p>
+<!--             <h5>  
+              Obunga party
+            </h5>  -->
+              <div id="navbarPhrase">Поговорим на языке боли</div>
           </div>
 
           <button id="navbarToggle" type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-controls="collapsable-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav ml-auto mt-2 ">
-            <li id="navHomeButton" class="nav-item d-sm-block d-lg-none active">
+            <li id="navHomeButton" class="nav-item d-sm-block d-lg-none">
               <a href="index.html">
                <i class="fas fa-home"></i></i> WHAT</a>
             </li>
