--- a/BabuinLand/snippets/Babuin-item.html
+++ b/BabuinLand/snippets/Babuin-item.html
@@ -11,5 +11,5 @@
       <div id="babuin-hazard-lvl">Уровень угрозы: {{hazard}}</div>
     </div>
   </div>
-  <hr class="d-block d-sm-none">
-</div>
+  <hr class="d-block">
+</div>  
