--- a/BabuinLand/snippets/home-snippet.html
+++ b/BabuinLand/snippets/home-snippet.html
@@ -3,19 +3,19 @@
       <img src="images/Babuini.jpg" alt="Picture of monkes" class="img-fluid w-100">
     </div>
       <div id="home-tiles" class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12">
           <a href="#" onclick="$dc.loadDegradation();"><div id="menu-tile">
             <span>Degradation</span></div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12">
           <a href="#" onclick="$dc.loadDepression();">
             <div id="specials-tile">
               <span>Depression</span>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+        <div class="col-xl-4 col-lg-6 mx-auto col-md-12 col-sm-12 col-12">
           <a href="#" onclick="$dc.loadAgression();"">
             <div id="map-tile">
               <span>Agression</span>
