--- a/BabuinLand/index.html
+++ b/BabuinLand/index.html
@@ -51,8 +51,8 @@
                <i class="far fa-eye"></i><br class="d-none"> А вы видите мой глаз?</a>
             </li>
             <li class="nav-item active">
-              <a href="#" class="nav-item active">
-                <i class="far fa-eye-slash"></i><br class="d-none"> Ай блять</a>
+              <a href="#" onclick="$dc.loadTechSupport();">
+                <i class="far fa-question-circle"></i><br class="d-none"> Тех. поддержка</a>
             </li>
            
           </ul><!-- #nav-list -->
