--- a/BabuinLand/snippets/poet-snippet.html
+++ b/BabuinLand/snippets/poet-snippet.html
@@ -2,7 +2,7 @@
   <div class="poet-item-tile">
     <div class="row">
       <div class="poet-item-content col-sm-6">
-        <h3 class="poet-item-author">Автор: умер</h3>
+        <h3 class="poet-item-author">Автор: ...</h3>
         <h4 class="poet-item-title">"Ночная лирика маленькой страны"</h4>
         <p class="poet-item-details">
           Нам не нужны параходы, <br>
@@ -29,8 +29,8 @@
       </div>
 
             <div class="poet-item-content col-sm-6">
-        <h3 class="poet-item-author">Автор: умер</h3>
-        <h4 class="poet-item-title">"Ночная лирика маленькой страны"</h4>
+        <h3 class="poet-item-author">Автор: ...</h3>
+        <h4 class="poet-item-title">-</h4>
         <p class="poet-item-details">
           Гирилл мандарин съел, <br>
           Встал, <br>
@@ -50,8 +50,8 @@
         </p>
       </div>
                   <div class="poet-item-content col-sm-6">
-        <h3 class="poet-item-author">Автор: пернул под пледом и задохнулся</h3>
-        <h4 class="poet-item-title">"Ночная лирика маленькой страны"</h4>
+        <h3 class="poet-item-author">Автор: ...</h3>
+        <h4 class="poet-item-title">-</h4>
         <p class="poet-item-details">
           рубик кубика плоская семья<br>
           вывареная осень пьяная пизда<br>
@@ -68,7 +68,7 @@
       </div>
    
                   <div class="poet-item-content col-sm-6">
-        <h3 class="poet-item-author">Автор: умер</h3>
+        <h3 class="poet-item-author">Автор: ...</h3>
         <h4 class="poet-item-title">Цикл стихов "бытие не существует"</h4>
         <p class="poet-item-details">
           мое очько не потеет <br>
@@ -101,7 +101,7 @@
 
                   <div class="poet-item-content col-sm-6">
         <h3 class="poet-item-author">Автор: ...</h3>
-        <h4 class="poet-item-title">"Ночная лирика маленькой страны"</h4>
+        <h4 class="poet-item-title">-</h4>
         <p class="poet-item-details">
           Лопнул насок<br>
           Понюхал пупок<br>
@@ -114,7 +114,7 @@
 
                   <div class="poet-item-content col-sm-6">
         <h3 class="poet-item-author">Автор: ...</h3>
-        <h4 class="poet-item-title">"Ночная лирика маленькой страны"</h4>
+        <h4 class="poet-item-title">-</h4>
         <p class="poet-item-details">
           ассалам гагаш<br>
           ебу по кайфу наташ<br>
@@ -126,7 +126,7 @@
 
                   <div class="poet-item-content col-sm-6">
         <h3 class="poet-item-author">Автор: ...</h3>
-        <h4 class="poet-item-title">"Ночная лирика маленькой страны"</h4>
+        <h4 class="poet-item-title">-</h4>
         <p class="poet-item-details">
           Ррорррррррп <br>
           О мой елдак,о мой елдак! <br>
