--- a/BabuinLand/snippets/home-snippet.html
+++ b/BabuinLand/snippets/home-snippet.html
@@ -1,6 +1,7 @@
-   
+  <audio src="../sounds/fart.mp3" id="fart_sound"></audio>
     <div class="jumbotron">
       <img src="images/Babuini.jpg" alt="Picture of monkes" class="img-fluid w-100">
+      <div id="secret-button" onclick="document.getElementById('fart_sound').play();"></div>
     </div>
       <div id="home-tiles" class="row">
         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12">
