--- a/BabuinLand/snippets/home-snippet.html
+++ b/BabuinLand/snippets/home-snippet.html
@@ -1,4 +1,4 @@
-  <audio src="../sounds/fart_sound.mp3" id="fart_sound"></audio>
+  <audio src="sounds/fart_sound.mp3" id="fart_sound"></audio>
     <div class="jumbotron">
       <img src="images/Babuini.jpg" alt="Picture of monkes" class="img-fluid w-100">
       <div id="secret-button" onclick="document.getElementById('fart_sound').play();"></div>
