--- a/BabuinLand/snippets/tech-support-snippet.html
+++ b/BabuinLand/snippets/tech-support-snippet.html
@@ -1,7 +1,7 @@
 <div id="tech-container" class="container-fluid">
-	<img id="babuin_picture" class="responsive" alt="Babuin" src="../images/babuin_calm.jpg">	
+	<img id="babuin_picture" class="responsive" alt="Babuin" src="images/babuin_calm.jpg">	
 		<button id="trigger-button" type="button" onclick="
-		document.getElementById('babuin_picture').src='../images/babuin_angry.jpg';
+		document.getElementById('babuin_picture').src='images/babuin_angry.jpg';
 		document.getElementById('trigger-button').innerHTML='*БАБУИНИЙ ВИЗГ*';">
 			Я хочу получить помощь специалиста.
 		</button>
