clean up of older project

--- a/BabuinLand/index.html
+++ b/BabuinLand/index.html
@@ -48,7 +48,7 @@
             </li>
             <li class="nav-item active">
               <a href="#" >
-               <i class="far fa-eye"></i><br class="d-none"> А вы видите мой глаз?</a>
+               <i class="far fa-eye"></i><br class="d-none"> Глаз?</a>
             </li>
             <li class="nav-item active">
               <a href="#" onclick="$dc.loadTechSupport();">
@@ -72,11 +72,11 @@
           <hr class="d-block d-sm-none">
         </section>
         <section id="address" class="col-sm-4">
-        <span>"Олег работает в алкашке чтобы купить себе трусы" (с) Олег</span>
+        <span>"Олег работает в алкашке" (с) Олег</span>
           <hr class="d-block d-sm-none">
         </section>
         <section id="testimonials" class="col-sm-4">
-          <span>Страница официально принята в комитет говна</span>
+          <span>Страница официально принята в комитет боли</span>
         </section>
       </div>
       <div class="text-center">&copy; Copyright Пошел нахуй сука блять 2020</div>
