--- a/BabuinLand/snippets/Babuin-items-title.html
+++ b/BabuinLand/snippets/Babuin-items-title.html
@@ -1,5 +1,5 @@
 <div id="babuin-list-title">
-	<h2  class="text-center">Безбожно воняющие</h2>
-	<div class="text-center">При обнаружении любой из этих особей полагается харчок в лицо
+	<h2  class="text-center">Безбожная боль</h2>
+	<div class="text-center">При обнаружении любой из этих особей полагается боль
 	</div>
 </div>
