--- a/BabuinLand/snippets/tech-support-snippet.html
+++ b/BabuinLand/snippets/tech-support-snippet.html
@@ -2,7 +2,7 @@
 	<img id="babuin_picture" class="responsive" alt="Babuin" src="images/babuin_calm.jpg">	
 		<button id="trigger-button" type="button" onclick="
 		document.getElementById('babuin_picture').src='images/babuin_angry.jpg';
-		document.getElementById('trigger-button').innerHTML='*БАБУИНИЙ ВИЗГ*';">
+		document.getElementById('trigger-button').innerHTML='*А*';">
 			Я хочу получить помощь специалиста.
 		</button>
 	</img>
